Fixed WCAG AAA contrast issues

--- a/src/app.css
+++ b/src/app.css
@@ -14,29 +14,25 @@
 
 /* Alerts */
 .alert-blue {
-	@apply border-blue-500 bg-blue-100 text-blue-800;
+	@apply border-blue-500 bg-blue-100 text-blue-900;
 }
 
 .alert-yellow {
-	@apply border-yellow-500 bg-yellow-100 text-yellow-800;
+	@apply border-yellow-500 bg-yellow-100 text-yellow-900;
 }
 
 .alert-red {
-	@apply bg-red-100;
-	@apply border-red-500;
-	@apply text-red-800;
+	@apply border-red-500 bg-red-100 text-red-900;
 }
 
 /* Buttons */
 .btn-blue {
-	@apply bg-blue-600;
-	@apply border-blue-800;
+	@apply border-blue-900 bg-blue-700;
 }
 
 .btn-blue:hover,
 .btn-blue:active {
-	@apply bg-blue-700;
-	@apply border-blue-900;
+	@apply border-blue-900 bg-blue-800;
 }
 
 .btn-blue:focus {
@@ -44,14 +40,12 @@
 }
 
 .btn-green {
-	@apply bg-green-600;
-	@apply border-green-800;
+	@apply border-green-900 bg-green-700;
 }
 
 .btn-green:hover,
 .btn-green:active {
-	@apply bg-green-700;
-	@apply border-green-900;
+	@apply border-green-900 bg-green-800;
 }
 
 .btn-green:focus {
@@ -59,14 +53,12 @@
 }
 
 .btn-red {
-	@apply bg-red-600;
-	@apply border-red-800;
+	@apply border-red-900 bg-red-700;
 }
 
 .btn-red:hover,
 .btn-red:active {
-	@apply bg-red-700;
-	@apply border-red-900;
+	@apply border-red-900 bg-red-800;
 }
 
 .btn-red:focus {
@@ -74,14 +66,12 @@
 }
 
 .btn-yellow {
-	@apply bg-yellow-600;
-	@apply border-yellow-800;
+	@apply border-yellow-900 bg-yellow-700;
 }
 
 .btn-yellow:hover,
 .btn-yellow:active {
-	@apply bg-yellow-700;
-	@apply border-yellow-900;
+	@apply border-yellow-900 bg-yellow-800;
 }
 
 .btn-yellow:focus {
@@ -89,14 +79,12 @@
 }
 
 .btn-gray {
-	@apply bg-gray-600;
-	@apply border-gray-800;
+	@apply border-gray-900 bg-gray-700;
 }
 
 .btn-gray:hover,
 .btn-gray:active {
-	@apply bg-gray-700;
-	@apply border-gray-900;
+	@apply border-gray-900 bg-gray-800;
 }
 
 .btn-gray:focus {
